// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Text /> > BodyLarge story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--body-lg_b3eba3"
  >
    Body large
  </p>
</div>
`;

exports[`<Text /> > BodyMedium story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--body-md_b3eba3"
  >
    Body medium
  </p>
</div>
`;

exports[`<Text /> > BodySmall story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--body-sm_b3eba3"
  >
    Body small
  </p>
</div>
`;

exports[`<Text /> > BodyXLarge story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--body-xl_b3eba3"
  >
    Body extra-large
  </p>
</div>
`;

exports[`<Text /> > BodyXSmall story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--body-xs_b3eba3"
  >
    Body Xsmall
  </p>
</div>
`;

exports[`<Text /> > CaptionMedium story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--caption-md_b3eba3"
  >
    Caption medium
  </p>
</div>
`;

exports[`<Text /> > CodePresets story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <div>
    <p
      class="_text_b3eba3 _text--code-xl_b3eba3"
    >
      Code Extra Large
    </p>
    <p
      class="_text_b3eba3 _text--code-lg_b3eba3"
    >
      Code Large
    </p>
    <p
      class="_text_b3eba3 _text--code-md_b3eba3"
    >
      Code Medium
    </p>
    <p
      class="_text_b3eba3 _text--code-sm_b3eba3"
    >
      Code Small
    </p>
    <p
      class="_text_b3eba3 _text--code-xs_b3eba3"
    >
      Code Extra Small
    </p>
  </div>
</div>
`;

exports[`<Text /> > Default story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--body-md_b3eba3"
  >
    Default &lt;Text /&gt; rendering
  </p>
</div>
`;

exports[`<Text /> > LabelXLarge story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--label-xl_b3eba3"
  >
    Label extra-large
  </p>
</div>
`;

exports[`<Text /> > OverridingFontFamily story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--body-md_b3eba3 !font-3"
  >
    You can use utility classes to override the font family used for a given size
  </p>
</div>
`;

exports[`<Text /> > TitleXLarge story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="_text_b3eba3 _text--title-xl_b3eba3"
  >
    Title extra-large
  </p>
</div>
`;

exports[`<Text /> > UsingColorTokens story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <div>
    <p
      class="_text_b3eba3 _text--body-xl_b3eba3 text-utility-warning"
    >
      using 
      <code>
        text-utility-warning
      </code>
       utility class
    </p>
    <p
      class="_text_b3eba3 _text--body-lg_b3eba3 text-utility-favorable"
    >
      using 
      <code>
        text-utility-favorable
      </code>
       utility class
    </p>
    <p
      class="_text_b3eba3 _text--body-md_b3eba3 text-utility-critical"
    >
      using 
      <code>
        text-utility-critical
      </code>
       utility class
    </p>
  </div>
</div>
`;
